openvidu-server: foundation for external composed recording